[BO_ADDITIONS] Fix (in front theme) alignement of user menu in admin toolbar

--- a/bo_additions/assets/css/toolbar_front.css
+++ b/bo_additions/assets/css/toolbar_front.css
@@ -1,6 +1,6 @@
-.toolbar-oriented .user-toolbar-tab {
-  float: right;
+.toolbar-oriented .toolbar-bar .user-toolbar-tab {
+    float: right;
 }
 .toolbar-oriented .user-toolbar-tab > .toolbar-tray-horizontal li {
- float: right;
+    float: right;
 }
